--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <% if @user == current_user %>
-	<h3>マイページ</h3>
+	<h3><%= t('.mypagetitle') %></h3>
 <% else %>
     <h3><%= @user.name %>さんのページ</h3>
 <% end %>
@@ -22,7 +22,7 @@
 
 
 <% if @user == current_user %>
- <%= link_to "マイページ編集", edit_user_path(@user.id) %>
+ <%= link_to t('.edittitle'), edit_user_path(@user.id) %>
 <% end %>
 <%#= link_to "投稿一覧", edit_user_path(@user.id) %>
-<%= link_to "いいねしたスポット一覧", favorites_user_path(@favorite_list, user_id: @user) %>
+<%= link_to t('.likedspots'), favorites_user_path(@favorite_list, user_id: @user) %>
