--- a/app/views/maps/_form.html.erb
+++ b/app/views/maps/_form.html.erb
@@ -3,31 +3,40 @@
 <% if user_signed_in? %>
 <%= form_with model: [map,comment], local:true do |f| %>
   <div class="field row">
-    <%= f.label :title, "タイトル" %>
+    <%= f.label :title %>
     <%= f.text_field :title %>
     <% if @comment.errors.include?(:title) %>
      <p style="color: red;"><%= @comment.errors.full_messages_for(:title).first %>
     <% end %>
   </div>
   <div class="field row">
-    <%= f.label :comment, "コメント" %>
+    <%= f.label :comment %>
     <%= f.text_area :comment %>
     <% if @comment.errors.include?(:comment) %>
      <p style="color: red;"><%= @comment.errors.full_messages_for(:comment).first %>
     <% end %>
   </div>
   <div class="field row">
-    <%= f.label :image, "写真(なくても投稿できます）" %>
-    <%= f.attachment_field :image %>
+    <!--<div class="image_wrapper">-->
+
+        <%= f.label :image %>
+        <!--<div class="item_image_btn">-->
+        <%= f.attachment_field :image %>
+        <!--, id: "file"-->
+    <!--  </div>-->
+    <!--  <div id="img_field" onClick="$('#file').click()", class: "btn btn-primary"  >-->
+    <!--<p>画像選択</p>-->
+    <!-- </div>-->
+    <!--</div>-->
   </div></br>
   <div class="field row" id="star">
-    <%= f.label :star,'評価 ', class:'col-md-3 col-form-label' %>
+    <%= f.label :star, class:'col-md-3 col-form-label' %>
     <%= f.hidden_field :star, id: :review_star %>
     <% if @comment.errors.include?(:star) %>
      <p style="color: red;"><%= @comment.errors.full_messages_for(:star).first %>
     <% end %>
   </div>
-  <%= f.submit "口コミを投稿" %>
+  <%= f.submit t('.submitcomment') %>
   <!-- 評価javascript -->
   <script>
   $('#star').raty({
@@ -41,5 +50,5 @@
   </script>
   <% end %>
    <% else %>
-  <div>口コミ投稿は会員の方のみができます</div>
+  <div><%= t('.commentonlymember') %></div>
   <% end %>
