--- a/app/views/maps/show.html.erb
+++ b/app/views/maps/show.html.erb
@@ -17,7 +17,7 @@
           });
          </script>
            <% else %>
-          <p>まだ口コミはありません</p>
+          <p><%= t('.comment') %></p>
            <% end %>
 
             <!--いいねボタン-->
@@ -51,9 +51,9 @@
              <div id="star-rate<%= comment.id %>"></div>
             <div><%= comment.comment %></div>
             <div><%= attachment_image_tag(comment, :image, :fill, 100, 100 ) %></div>
-            <div><%= link_to comment.user.nickname, user_path(comment.user.id) %>さんが投稿しました。</div>
+            <div><%= link_to comment.user.nickname, user_path(comment.user.id) %><%= t('.hascommented') %></div>
             <div><%= comment.user.country_name %></div>
-            <div><%= comment.created_at %></div>
+            <div><%= t('.postedon') %><%= comment.created_at.strftime('%Y/%m/%d') %></div>
             <script>
                   $('#star-rate<%= comment.id %>').raty({
                     size      : 25,
@@ -66,7 +66,7 @@
                 </script>
                 <% if user_signed_in? %>
                 <% if comment.user_id == current_user.id %>
-                <td><%= link_to "削除", map_comment_path(comment.map_id, comment.id), method: :delete, data: {confirm: "本当に削除してもよろしいですか？"} %></td>
+                <td><%= link_to t('.delete'), map_comment_path(comment.map_id, comment.id), method: :delete, data: {confirm: t('.areyousure')} %></td>
                 <% end %>
                 <% end %>
             <% end %></br>
@@ -78,11 +78,11 @@
         <div class='col-xs-3'>
           <div class="commentnew">
 
-        <h4>新規口コミ投稿</h4>
+        <h4><%= t('.newcomment') %></h4>
         <%= render 'maps/form', map: @map, comment: Comment.new %>
-        <h6><%= link_to "口コミマップに戻る", maps_path %></h6>
+        <h6><%= link_to  t('.backtomap'),  maps_path %></h6>
         <% unless user_signed_in? %>
-        <h6><%= link_to "ログインして口コミを投稿する", new_user_session_path%></h6>
+        <h6><%= link_to  t('.logintocomment'), new_user_session_path%></h6>
         <% end %>
           </div>
         </div>
