--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,8 @@
 <section class="inner">
-  <h2 class="section-ttl">新規会員登録</h2>
+  <h2 class="section-ttl"><%= t('.registraitons') %></h2>
 
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%#= render 'layouts/error_messages', resource: @customer %>
+  <%= form_with model: @user, url: user_registration_path, id: 'new_user', class: 'new_user', local: true do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
     <table class="customer_info customer_form">
       <thead>
         <th></th>
@@ -11,39 +11,39 @@
       </thead>
       <tbody>
         <tr>
-          <td>名前</td>
+          <td><%= f.label :name %></td>
           <td><%= f.text_field :name, autofocus: true %></td>
         </tr>
         <tr>
-          <td>ユーザー名</td>
+          <td><%= f.label :nickname %></td>
           <td><%= f.text_field :nickname %></td>
         </tr>
         <tr>
-          <td><%= f.label :email, "メールアドレス" %></td>
+          <td><%= f.label :email %></td>
           <td colspan="2"><%= f.email_field :email, autocomplete: "email" %></td>
         </tr>
         <tr>
-          <td>国</td>
+          <td><%= f.label :country %></td>
           <td><%= f.country_select :country, selected: "JP", format: :with_alpha2 %></td>
         </tr>
         <tr>
-          <td><%= f.label :password, "パスワード(#{@minimum_password_length}文字以上)" %></td>
+          <td><%= f.label t('.password') %></td>
           <td colspan="2"><%= f.password_field :password, autocomplete: "new-password" %></td>
         </tr>
         <tr>
-          <td><%= f.label :password_confirmation, "パスワード(確認用)" %></td>
+          <td><%= f.label t('.password_confirmation') %></td>
           <td colspan="2"><%= f.password_field :password_confirmation, autocomplete: "new-password" %></td>
         </tr>
         <tr>
           <td></td>
-          <td colspan="2"><%= f.submit "新規登録", class: "btn btn-success" %></td>
+          <td colspan="2"><%= f.submit "OK", class: "btn btn-success" %></td>
         </tr>
       </tbody>
     </table>
   <% end %>
 
-  <h2 class="section-ttl">既に登録済みの方</h2>
-  <p><%= link_to "こちら", new_user_session_path, class: "underline" %>からログインしてください。</p>
+  <h2 class="section-ttl"><%= t('.ifmember') %></h2>
+  <p><%= t('.click') %><%= link_to t('.here'), new_user_session_path, class: "underline" %><%= t('.alreadymember') %></p>
 </section>
 
 
