--- a/app/views/maps/_form.html.erb
+++ b/app/views/maps/_form.html.erb
@@ -1,5 +1,3 @@
-
-
 <% if user_signed_in? %>
 <%= form_with model: [map,comment], local:true do |f| %>
   <div class="field row">
@@ -30,12 +28,12 @@
     <!--</div>-->
   </div></br>
   <div class="field row" id="star">
-    <%= f.label :star, class:'col-md-3 col-form-label' %>
+    <%= f.label :star, class:'col-md-3 col-form-label' %></br>
     <%= f.hidden_field :star, id: :review_star %>
     <% if @comment.errors.include?(:star) %>
      <p style="color: red;"><%= @comment.errors.full_messages_for(:star).first %>
     <% end %>
-  </div>
+  </div></br>
   <%= f.submit t('.submitcomment') %>
   <!-- 評価javascript -->
   <script>
