--- a/app/views/maps/show.html.erb
+++ b/app/views/maps/show.html.erb
@@ -41,7 +41,7 @@
           　<!--管理者のみ可能にしたい-->
           	<!--<h5>スポットの編集</h5>-->
             <td><%#= link_to "編集", edit_map_path(@map) %></td>
-            <td><%= link_to "削除", map_path(@map), method: :delete, data: {confirm: "本当に削除してもよろしいですか？"} %></td>
+            <td><%#= link_to "削除", map_path(@map), method: :delete, data: {confirm: "本当に削除してもよろしいですか？"} %></td>
 
 
             <% @comments.each do |comment| %>
