--- a/app/views/maps/top.html.erb
+++ b/app/views/maps/top.html.erb
@@ -57,7 +57,7 @@
   <% end %>
 
 
-<div id='map'></div>
+<div id='map2'></div>
 
 
 
@@ -72,7 +72,7 @@
     geocoder = new google.maps.Geocoder()
 
   // 初期位置の指定
-  map = new google.maps.Map(document.getElementById('map'), {
+  map = new google.maps.Map(document.getElementById('map2'), {
   center: {
         lat: 34.704064,
         lng: 135.500435
