--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -20,7 +20,8 @@
   <% end %>
 
 
-  <div id='map'>
+  <div id='mapindex'></div>
+  <!--<div class='map'></div>-->
 
 <script>
   let map;
@@ -33,7 +34,8 @@
     geocoder = new google.maps.Geocoder()
 
   // 初期位置の指定
-  map = new google.maps.Map(document.getElementById('map'), {
+  map = new google.maps.Map(document.getElementById('mapindex'), {
+  // map = new google.maps.Map(document.getElementsByClassName('map'), {
   center: {
         lat: 34.704064,
         lng: 135.500435
