--- a/app/views/maps/_form.html.erb
+++ b/app/views/maps/_form.html.erb
@@ -27,6 +27,19 @@
     <!-- </div>-->
     <!--</div>-->
   </div></br>
+
+  <img id="preview" style="width:40%;">
+
+<script>
+  $('#comment_image').on('change', function (e) {
+    var reader = new FileReader();
+    reader.onload = function (e) {
+        $("#preview").attr('src', e.target.result);
+    }
+    reader.readAsDataURL(e.target.files[0]);
+});
+</script>
+
   <div class="field row" id="star">
     <%= f.label :star, class:'col-md-3 col-form-label' %></br>
     <%= f.hidden_field :star, id: :review_star %>
