--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -94,20 +94,43 @@ main {
         // transform: translate(-50%, -50%)
 }
 
-// .item_image_btn{
-//     display: none;
-// }
-// // 元の送信ボタンを隠す
+.item_image_btn{
+    display: none;
+}
+// 元の送信ボタンを隠す
 
-// #img_field {
-//   font-size: 25px;
-//   font-style: inherit;
-//   margin: 0 auto;
-//   color: white;
-//   background-color: #5bc0de;
-//   border-radius: 5px;
-//   width: 300px;
-//   height: 40px;
-//   text-align: center;
-//   line-height: 40px;
-// }
+#img_field {
+  font-size: 25px;
+  font-style: inherit;
+  margin: 0 auto;
+  color: white;
+  background-color: #5bc0de;
+  border-radius: 5px;
+  width: 300px;
+  height: 40px;
+  text-align: center;
+  line-height: 40px;
+  position: fixed;
+}
+
+#preview {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.imagesize {
+  width: 100px;
+  height: 50px;
+  padding-bottom: 150px;
+}
+
+
+.slick-next {
+    right: 10px !important;
+    z-index: 100;
+ }
+
+.slick-prev {
+    left: 10px !important;
+  z-index: 100;
+ }
