--- a/app/views/maps/top.html.erb
+++ b/app/views/maps/top.html.erb
@@ -3,6 +3,7 @@
 
     <div class='col-lg-7'>
 
+
 <h1><%= t('.welcome') %></h1>
 
 <h3><%= t('.mostliked') %></h3>
@@ -26,9 +27,15 @@
   <% end %>
 
 
+
+<div class="imagesize">
+<div class="slider">
 <% map.comments.each do |comment| %>
-<%= attachment_image_tag(comment, :image, :fill, 100, 100 ) %>
+ <%= attachment_image_tag comment, :image, :fill, 100, 100, format: 'jpeg' %>
 <% end %>
+</div>
+</div>
+</br>
 
 <% end %>
 </div>
