--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,7 +28,6 @@ header {
   border-right-width: 5px;
   border-left-width: 5px;
   width: 100%;
-  // height: 300px;
   position: fixed;
   background-color: #fff;
   z-index: 500;
@@ -42,12 +41,14 @@ header {
   text-align: center;
   padding: 10px 0;
   margin: 0 auto;
+  height: 50px;
 }
 
 .nav-list-item {
   list-style: none;
   display: inline-block;
   margin: 0 20px;
+  height: 30px;
 }
 
 
@@ -83,7 +84,8 @@ main {
 .search-form {
   display: flex;
   justify-content: flex-end;
-  padding-right: 20px;
+  padding-right: 50px;
+  padding-bottom: 20px;
 }
 
 #top-center {
