--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -57,11 +57,11 @@ main {
   padding: 210px 0;
 }
 
-#maptop {
-  height: 500px;
-}
+// #maptop {
+//   height: 500px;
+// }
 
-#mapindex {
+#map {
   height: 500px;
 }
 
