--- a/app/views/maps/show.html.erb
+++ b/app/views/maps/show.html.erb
@@ -3,18 +3,18 @@
 
     <div class='col-xs-9'>
         <h1><%= @map.spotname %></h1>
-        <!--ハッシュタグ-->
 
-          <div class="average-star-rate<%= @avarage_star %>"></div>
+          <div class="average-star-rate<%= @map.id %>"></div>
            <% if @comments.present? %>
-            <div><%= @comments.count %><%= t('.review')%><%= @average_star %><%= t('.point')%></div>
+            <div><%= @comments.total_count %><%= t('.review')%><%= @map.comments.average(:star).to_f.round(1) %><%= t('.point')%></div>
          <script>
-         $('.average-star-rate<%= @avarage_star %>').raty({
+         $('.average-star-rate<%= @map.id %>').raty({
            size      : 25,
            starOff   : '<%= asset_path('star-off.png') %>',
            starOn    : '<%= asset_path('star-on.png') %>',
+           starHalf  : '<%= asset_path('star-half.png') %>',
            readOnly: true,
-           score: <%= @average_star %>,
+           score: <%= @map.comments.average(:star) %>,
           });
          </script>
            <% else %>
