--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -134,3 +134,14 @@ main {
     left: 10px !important;
   z-index: 100;
  }
+
+ @media screen and (max-width: 550px) {
+  header {
+    width: 100%;
+  }
+
+  .search-form{
+    position: fixed;
+  }
+
+ }
