--- a/app/views/maps/country.html.erb
+++ b/app/views/maps/country.html.erb
@@ -1,16 +1,10 @@
-<% @country_ranks.keys.each do |country_name| %>
+<% @country_ranks.keys.each do |country| %>
 
-<%#= map %>
-<%#= country_name.country_name %>
+<%= country %>
 
-<% @country_ranks[country_name].each do |spot| %>
-<div><%= link_to spot.spotname, map_path(spot.id)%></div>
-<%= spot.country_name %>
+<% @country_ranks[country].each do |map| %>
+<div><%= link_to map.spotname, map_path(map.id)%></div>
 <% end %>
 
-
-
 <% end %>
-
-<%= @country_name %>
 
