--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -29,7 +29,7 @@
 
        <div class="search-form">
            <%= form_with url: search_path, method: :get, local: true do |f| %>
-            <%= f.label :model, t('.serachspot') %>
+            <%= f.select :model, options_for_select({ t('.serachspot') => "map", "Hashtag" => "hashtag" }) %>
             <%= f.text_field :content %>
             <%= f.select :method, options_for_select({  t('.exact') => "perfect",  t('.forward') => "forward",  t('.backward') => "backward",  t('.partial') => "partial" }) %>
             <%= f.submit t('.searchbutton') %>
