--- a/app/views/maps/country.html.erb
+++ b/app/views/maps/country.html.erb
@@ -1,6 +1,6 @@
 <% @country_ranks.keys.each do |country| %>
 
-<%= country %>
+<h3><%= country %>に人気のスポット</h3>
 
 <% @country_ranks[country].each do |map| %>
 <div><%= link_to map.spotname, map_path(map.id)%></div>
