Add translation for guest user

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,7 +18,7 @@
        <ul class="nav-list">
         　<li class="nav-list-item"><%= link_to t('.map'), maps_path, class: "btn btn-default" %></li>
           <li class="nav-list-item"><%= link_to t('.login'), new_user_session_path, class: "btn btn-default"%></li>
-          <li class="nav-list-item"><%= link_to 'ゲストログイン（閲覧用）', users_guest_sign_in_path, method: :post, class: "btn btn-default" %></li>
+          <li class="nav-list-item"><%= link_to t('.geustuser'), users_guest_sign_in_path, method: :post, class: "btn btn-default" %></li>
         </ul>
       </nav>
   <% end %>
