--- a/app/views/maps/top.html.erb
+++ b/app/views/maps/top.html.erb
@@ -31,7 +31,7 @@
 <div class="imagesize">
 
    <% if map.comments.select{|comment| comment.image.present?}.count == 0 %>
-    <p>写真はまだありません</p>
+    <p><%= t('.noimage') %></p>
    <% else %>
    <div class="slider">
     <% map.comments.select{|comment| comment.image.present?}.each do |comment| %>
